<resources>
    <string name="app_name">ToDoApp2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="re_enter_your_password">Re-enter your password</string>
    <string name="sign_in">Sign In</string>
    <string name="already_registered">Already registered?</string>
    <string name="add_new_task">Add new task</string>
</resources>